[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Personatge.gd" type="Script" id=1]
[ext_resource path="res://Sprites/2 Owlet_Monster/sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Cor2.png" type="Texture" id=3]
[ext_resource path="res://Tiles sets/Energia bar inside.png" type="Texture" id=4]
[ext_resource path="res://Tiles sets/Energia bar top.png" type="Texture" id=5]
[ext_resource path="res://Tiles sets/Energia bar back.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0

[sub_resource type="Animation" id=7]
resource_name = "Atac"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disparar"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Dany"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump"
length = 0.4
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Mort"
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6, 0.72, 0.84, 0.96 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ), Vector2( 4, 5 ), Vector2( 5, 5 ), Vector2( 6, 5 ), Vector2( 7, 5 ), Vector2( 7, 4 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:script")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.52
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[node name="Personatge" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="Sprite1" type="Sprite" parent="HUD"]
position = Vector2( 36, 88 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="HUD"]
position = Vector2( 72, 88 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="HUD"]
position = Vector2( 108, 88 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="HUD"]
position = Vector2( 144, 88 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="HUD"]
position = Vector2( 180, 88 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="HUD"]
position = Vector2( 216, 88 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 3 )

[node name="Energia" type="TextureProgress" parent="HUD"]
margin_left = 19.2
margin_top = 16.0
margin_right = 339.2
margin_bottom = 83.0
rect_scale = Vector2( 0.666789, 0.594314 )
min_value = 10.0
value = 100.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.72529e-09, -1 )
scale = Vector2( 1.0023, 1.15734 )
texture = ExtResource( 2 )
hframes = 8
vframes = 6
region_rect = Rect2( 250.745, 145.643, 31.5875, 12.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.33333, 1.66667 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -2, 0 )
current = true
zoom = Vector2( 0.55, 0.55 )
limit_smoothed = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.8
anims/Atac = SubResource( 7 )
anims/Dany = SubResource( 8 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Mort = SubResource( 9 )
anims/RESET = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/fall = SubResource( 6 )

[node name="Disparar" type="Timer" parent="."]
wait_time = 0.7

[node name="Estamina" type="Timer" parent="."]
one_shot = true

[node name="Ma" type="Position2D" parent="."]
position = Vector2( 0, -13.3333 )

[connection signal="input_event" from="." to="." method="_on_Personatge_input_event"]
[connection signal="value_changed" from="HUD/Energia" to="." method="_on_Energia_value_changed"]
[connection signal="timeout" from="Disparar" to="." method="_on_Disparar_timeout"]
[connection signal="timeout" from="Estamina" to="." method="_on_Estamina_timeout"]
